[package]
name = "dcc-wasm"
version = "0.1.0"
authors = ["Benno Tielen <Benno@tielen.nl>"]
edition = "2018"
description = "Parse Digital Covid Certificates with Webassembly"
license = "MIT"
keywords = ["dcc", "wasm", "covid", "certificate", "parse", "health certificate"]
repository = "https://github.com/btielen/dcc-wasm"
homepage = "https://github.com/btielen/dcc-wasm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = {version = "0.2.63", features = ["serde-serialize"]}
base45 = "3.0.0"
flate2 = "1.0.22"
ciborium = "0.2.0"
p256 = {version = "0.10.1", features = ["ecdsa-core"]}
x509-parser = "0.12.0"
base64 = "0.13.0"
getrandom = { version = "0.2.4", features = ["js"] }
serde = {version ="1.0.133", features = ["derive"]}

[dev-dependencies]
wasm-bindgen-test = "0.3.13"
serde_json = "1.0.75"

[profile.release]
lto = true
opt-level = "z"
